tests/fixtures/type_checker/error/numeric_assignment.galaxy
void numeric_assignment()
{
    int val_int;
    fixed val_fixed;
    byte val_byte;

    val_int = 1;
    val_int = 1.0;
    // ^ERR
    val_int = val_fixed;
    // ^ERR

    val_byte = 0;
    val_byte = val_int;
    val_byte = val_fixed;
    // ^ERR

    val_fixed = 1.0;
    val_fixed = val_int;
    val_fixed = val_byte;
}
